# wikimark

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
css/: content.css  icons.css  reset.css  wiki.css
nix/: devshell.nix  nixos-module.nix  package.nix
sass/: _content.scss  _icons.scss  wiki.scss
src/: actors.rs  errors.rs  extractors.rs  git.rs  graphql.rs  main.rs  md2html.rs  page.rs  routes.rs  scss2css.rs  state.rs  templates.rs
static/: edit.js  editor.js
templates/: changelog.html  dir.html  edit.html  index.html  page.html  pages.html
