[package]
name = "wikimark"
version = "0.2.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.9.3"
syntect = "5.0.0"
tera = "1.19.0"
serde = "1.0.164"
serde_derive = "1.0.164"
warp = "0.3.5"
sass-rs = "0.2.2"
log = "0.4.19"
pretty_env_logger = "0.5.0"
git2 = { version = "0.17.2", features = ["vendored-libgit2"] , default-features = false}
slab_tree = "0.3.2"
slug = "0.1.4"
serde_json = "1.0.99"
anyhow = "1.0.71"
futures = "0.3.28"
once_cell = "1.18.0"
tokio = { version = "1.28.2", features = ["full"] }
thiserror = "1.0.40"
