[package]
name = "wikimark"
description = "Markdown-based wiki stored in a git repo"
version = "0.5.4"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
pulldown-cmark = "0.13.0"
syntect = "5.3.0"
serde = "1.0.228"
serde_derive = "1.0.228"
slab_tree = "0.3.2"
slug = "0.1.6"
anyhow = "1.0.100"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["tracing", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
http = "1.4.0"
dotenv = "0.15.0"
tracing = "0.1.44"
include_dir = "0.7.4"
mime_guess = "2.0.5"
serde_yaml = "0.9.34"
clap = { version = "4.5.54", features = ["derive", "env"] }
tower-livereload = "0.10.2"
chrono = "0.4.42"
minijinja = { version = "2.14.0", features = ["loader", "builtins", "json"] }
gix = "0.77.0"

[profile.dist]
inherits = "release"
strip = true
lto = true
codegen-units=1
